tests/expectations/compiler/integers/u8/negate.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected a signed integer, group, or field but type `u8` was found.
    --> compiler-test:5:17
     |
   5 |         return -a;
     |                 ^
"""]
